[workspace]
resolver = "2"
members = ["contracts/credence_bond", "contracts/credence_delegation", "contracts/credence_treasury", "contracts/arbitration", "contracts/credence_registry"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
